# ROAR-Nouveau-Autonomous-System

./: .gitignore  README.md
GUI/: index.html  package-lock.json  package.json  rover_sim_node.py  server.js  static-server.js  ws_ros2_bridge.py
GUI/plugins/Arm-Control/: ArmControlView.css  ArmControlView.html  ArmControlView.js  plugin.js
GUI/plugins/Arm-Control-v2/: ArmControlV2View.css  ArmControlV2View.js  ArmControlView.html  plugin.js
GUI/plugins/ArmControlFinal/: ArmControlView.js
GUI/plugins/Drilling-Control/: DrillingControlView.css  DrillingControlView.html  DrillingControlView.js
GUI/plugins/mission-control/: MissionControlView.js  RoverStatusView.js
Path-Planning/apf_trials/: README.md  package.xml  setup.cfg  setup.py
Path-Planning/apf_trials/APF_map/: APF_world.world
Path-Planning/apf_trials/APF_map/APF_model/: model.config  model.sdf
Path-Planning/apf_trials/apf_trials/: APF_update.py  Obstacle_publisher.py
Path-Planning/apf_trials/config/: obstacleParams.yaml  params.yaml
Path-Planning/apf_trials/launch/: launch.py
Path-Planning/heightmap_costmap/: README.md  package.xml  path.csv  real_path.csv  setup.cfg  setup.py  total_cost.csv
Path-Planning/heightmap_costmap/Results/: cost_x.csv  cost_y.csv  total_cost.csv
Path-Planning/heightmap_costmap/heightmap_costmap/: a_star.py  heightmap_to_costmap.py  map_calibration.py
Path-Planning/heightmap_costmap/launch/: calibration.launch.py  costmap.launch.py  pathgen1.launch.py
