<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>heightmap_costmap</name>
  <version>0.0.0</version>
  <description>The heightmap_costmap package</description>

  <maintainer email="abdelrhman@todo.todo">abdelrhman</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tqdm</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>python3-tqdm</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>